--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,9 +1,12 @@
+
+
 html,
 body {
   padding: 0;
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+
 }
 
 a {
@@ -13,4 +16,51 @@ a {
 
 * {
   box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+}
+
+
+/* .showNavbar {
+  display: none;
+}
+.navMainDiv > a {
+  padding: 10px;
+  color: #253137;
+  text-decoration: none;
+  font-size: 18px;
+}
+.navMainDiv > a:hover {
+  background-color: rgb(81, 81, 81);
+  color: #fff;
+}
+.navMainDiv > a > svg:hover {
+  color: #fff;
+} */
+/* .hrline{
+  display: block;
+} */
+
+
+
+/* curtom css */
+
+/* 
+.main{
+  align-items: center;
+  text-align: center;
+} */
+
+
+
+@media only screen and (max-width:700px){
+  .hrline{
+    display: none;
+  }
+}
+
+/* Detail page  */
+.detailpage{
+  text-align: center;
+  align-items: center;
 }
