--- a/src/components/SecondNavbar/Navbar.module.css
+++ b/src/components/SecondNavbar/Navbar.module.css
@@ -30,3 +30,62 @@ background-color: #253137;
 .imglogo{
     max-width: 100%;
 }
+
+@media only screen and (min-width:1200px) {
+    .barIcon{
+        display: none;
+        /* font-size: '40px'; */
+       
+    }
+    
+}
+
+
+@media only screen and (max-width:700px) {
+    .barIcon{
+        display: block;
+       
+    }
+    .barListdiv a{
+        text-decoration: none;
+    }
+}
+
+.barDiv{
+    width: 150px;
+    height: 100vh;
+    background-color: white;
+    position: fixed;
+    left: 0;
+    top: 0;
+    z-index: 10;
+    padding-top: 10%;
+    padding-left: 5%;
+    /* justify-items: center; */
+    color: black;
+    font-size: 20px;
+    
+    
+}
+.barListdiv a{
+    text-decoration: none;
+}
+.barList{
+    display: flex;
+    text-align: center;
+    justify-content: center;
+    flex-direction: column;
+
+}
+.barListdiv{
+   padding: 5%;
+
+}
+
+.crossIcon{
+    position: absolute;
+    top: 0;
+    right: 0;
+    color: black;
+    background-color: red;
+}
