--- a/src/components/News/news.module.css
+++ b/src/components/News/news.module.css
@@ -1,12 +1,19 @@
 .newscontainer{
     display: flex;
     flex-direction: row;
-    max-width: 100%;
+    /* max-width: 100%; */
 }
 .newsbox{
     max-width: 100%;
     display: flex;
     flex-direction: column;
+}
+.mainnews{
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding-left: 5%;
 }
 .imgdiv{
     position:'absolute';
@@ -36,6 +43,7 @@
 .newstitle{
     /* margin-top: 10px; */
     cursor: pointer;
+    padding-right: 30px;
 }
 /* .mainnews{
     min-height:'550px';
@@ -50,9 +58,31 @@
     margin-right : 40px;
     margin-top: 30px;
 }
+.news{
+    display: flex;
+    /* background-color: #151515; */
+    color: white;
+    /* padding: 30px; */
+    justify-content: center;
+    min-height: 100vh;
+    /* align-items: center; */
+    padding: 5% 5%; 
+
+}
 
 @media only screen and (max-width:600px){
     .mainnewsrow{
         flex-wrap: wrap;
+    }
+    .news{
+        /* background-color: lightgreen; */
+        display: flex;
+        /* max-width: 100%;
+        padding: 0px 5% 0px 5%; */
+        align-items: center;
+        justify-content: center;
+        max-width: 100%;
+        /* margin-left: 15px; */
+        /* margin-right: 20px; */
     }
 }
