--- a/src/components/News/news.module.css
+++ b/src/components/News/news.module.css
@@ -3,23 +3,25 @@
     flex-direction: row;
     /* max-width: 100%; */
 }
-.newsbox{
+/* .newsbox{
     max-width: 100%;
     display: flex;
     flex-direction: column;
-}
+} */
 .mainnews{
-    width: 100%;
+    max-width: 100%;
     display: flex;
     align-items: center;
     justify-content: center;
-    padding-left: 5%;
+    /* padding: 18%; */
+    /* margin: 3%; */
+    margin-top: 20px;
 }
-.imgdiv{
+/* .imgdiv{
     position:'absolute';
     background-color:'white';
     width: 100%;
-}
+} */
 .imgdiv >img{
     height: 100%;
     width: 100%;
@@ -54,20 +56,16 @@
     margin-right: 6%;
     margin-top: 1%;
 }
-.mainnewscol{
-    margin-right : 40px;
-    margin-top: 30px;
-}
 .news{
     display: flex;
     /* background-color: #151515; */
     color: white;
     /* padding: 30px; */
     justify-content: center;
-    min-height: 100vh;
+    max-height: 100vh;
     /* align-items: center; */
     padding: 5% 5%; 
-
+    /* margin-bottom: 20px; */
 }
 
 @media only screen and (max-width:600px){
@@ -75,14 +73,13 @@
         flex-wrap: wrap;
     }
     .news{
-        /* background-color: lightgreen; */
         display: flex;
-        /* max-width: 100%;
-        padding: 0px 5% 0px 5%; */
         align-items: center;
         justify-content: center;
-        max-width: 100%;
-        /* margin-left: 15px; */
-        /* margin-right: 20px; */
+        width: 100%;
+       
+    }
+    .image{
+        height: 300px;
     }
 }
