--- a/src/components/NewsWarp/newswrap.module.css
+++ b/src/components/NewsWarp/newswrap.module.css
@@ -2,11 +2,14 @@
     display: flex;
     background-color: #151515;
     color: white;
-    /* padding: 30px; */
+    width: 100%;
     justify-content: center;
     min-height: 100vh;
-    align-items: center;
     padding: 5% 5%; 
+    margin-bottom: 30px;
+}
+.newsimage{
+    height: '400px';
 }
 
 @media screen  and (max-width:700px){
@@ -14,5 +17,8 @@
         display: flex;
         flex-direction: column;
         flex-wrap: wrap;
+    }
+    .newsimage{
+        height: '200px';
     }
 }
