--- a/src/components/DetailPage/detailpage.module.css
+++ b/src/components/DetailPage/detailpage.module.css
@@ -15,9 +15,21 @@
     justify-content: center;
 }
 
-@media only screen and (max-width:700px) {
+@media only screen and (max-width:480px) {
     .newsdetailrow{
     flex-wrap: wrap;
-
     }
+    .detailcontent{
+        width: 100px;
+    } 
+    .detailcontentmain{
+        width: 700px;
+        overflow-y: scroll;
+    }
+}
+
+@media only screen and (max-width:1200px) {
+    .detailcontent{
+        width: 600px;
+    } 
 }
