--- a/src/components/News/news.module.css
+++ b/src/components/News/news.module.css
@@ -3,31 +3,22 @@
     flex-direction: row;
     /* max-width: 100%; */
 }
-/* .newsbox{
-    max-width: 100%;
-    display: flex;
-    flex-direction: column;
-} */
 .mainnews{
     max-width: 100%;
     display: flex;
     align-items: center;
     justify-content: center;
-    /* padding: 18%; */
-    /* margin: 3%; */
     margin-top: 20px;
 }
-/* .imgdiv{
-    position:'absolute';
-    background-color:'white';
-    width: 100%;
-} */
+
 .imgdiv >img{
     height: 100%;
     width: 100%;
+    box-shadow: 0px 5px 10px 0px rgba(0, 0, 0, 0.5); 
+
 }
 .imgdiv:hover{
-    box-shadow: 0 3px 10px rgb(0 0 0 / 0.2);
+    box-shadow: 5px y-offset;
     cursor: 'pointer'; 
 }
 
@@ -42,11 +33,7 @@
     padding: 2px;
     font-weight: bold;
 }
-.newstitle{
-    /* margin-top: 10px; */
-    cursor: pointer;
-    padding-right: 30px;
-}
+
 /* .mainnews{
     min-height:'550px';
 } */
@@ -58,7 +45,6 @@
 }
 .news{
     display: flex;
-    /* background-color: #151515; */
     color: white;
     /* padding: 30px; */
     justify-content: center;
@@ -68,7 +54,7 @@
     /* margin-bottom: 20px; */
 }
 
-@media only screen and (max-width:600px){
+@media only screen and (max-width:360px){
     .mainnewsrow{
         flex-wrap: wrap;
     }
@@ -82,4 +68,33 @@
     .image{
         height: 300px;
     }
+
+     .contenthtmldiv{
+        width: 100px;
+    }
+
 }
+
+
+
+@media only screen and (max-width:1200px){
+    .mainnewsrow{
+        flex-wrap: wrap;
+    }
+    .news{
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        width: 100%;
+       
+    }
+    .image{
+        height: 300px;
+    }
+
+    .contenthtmldiv{
+        /* width: 200px; */
+        overflow-y: scroll;
+    }
+}
+
