--- a/src/components/Pagination/pagination.module.css
+++ b/src/components/Pagination/pagination.module.css
@@ -1,8 +1,20 @@
 .paginationmain{
     display: flex;
     flex-direction: row;
-    justify-content: space-between;
+    justify-content: center;
     margin: 0 10% 0 10%;
+    margin-top: 20px;
+    margin-bottom: 20px;
+    color: black;
+    
+}
+.pagediv{
+    /* border: 1px dashed #0B5ED7; */
+    width: 200px;
+    background-color: white;
+    box-shadow: 0px 5px 10px 0px rgba(0, 0, 0, 0.5); 
+    display: flex;
+    justify-content: space-between ;
 }
 
 .arrow{
