--- a/src/components/Wrap/wrap.module.css
+++ b/src/components/Wrap/wrap.module.css
@@ -10,6 +10,15 @@
     justify-content: center;
 }
 
+.wrap>div {
+    display: flex;
+    flex-wrap: wrap;
+}
+
+.wrap>div>div {
+    margin-right: 6px;
+}
+
 @media only screen and (max-width:640px) {
     .bitcoincol {
         display: none;
@@ -82,8 +91,11 @@
 
 .percentage {
     color: #F14865;
+    margin-left: 4px;
 }
 
 .perc {
     color: yellowgreen;
+    margin-left: 4px;
+
 }
