--- a/src/components/News/news.module.css
+++ b/src/components/News/news.module.css
@@ -69,14 +69,18 @@
         height: 300px;
     }
 
-     /* .contenthtmldiv{
-        width: 100px;
-    } */
-
 
 }
 
-
+.newsmain{
+    padding: 0 60px 0 60px;
+}
+.newsimagediv{
+    height: 100px;
+}
+.nwesimage{
+    height: 100%;
+}
 
 @media only screen and (max-width:1200px){
     .mainnewsrow{
@@ -114,6 +118,9 @@
     }
     .image{
         height: 300px;
+    }
+    .newsmain{
+        padding: 0 20px 0 20px;
     }
 
 }
