--- a/src/components/NewsWarp/newswrap.module.css
+++ b/src/components/NewsWarp/newswrap.module.css
@@ -3,15 +3,16 @@
     background-color: #151515;
     color: white;
     width: 100%;
-    overflow-x: scroll;
+
     justify-content: center;
-    min-height: 100vh;
+    height: full;
     padding: 5% 5%; 
     margin-bottom: 30px;
 }
 .newsimagediv{
     height: 500px;
 }
+
 @media screen  and (max-width:640px){
     .newswrapcontainer{
         display: flex;
@@ -26,6 +27,13 @@
     .wrapcol2{
         display: flex;
         flex-direction: row;
+    }
+    .newsimage{
+        height: 200px !important;
+    }
+    .newsimageright{
+        height: 220px;
+      
     }
 }
 
