--- a/src/components/News/news.module.css
+++ b/src/components/News/news.module.css
@@ -1,7 +1,7 @@
 .newscontainer{
     display: flex;
     flex-direction: row;
-    /* max-width: 100%; */
+ 
 }
 .mainnews{
     max-width: 100%;
@@ -34,9 +34,7 @@
     font-weight: bold;
 }
 
-/* .mainnews{
-    min-height:'550px';
-} */
+
 .mainnewsrow{
     display: flex;
     margin-left: 6% ;
@@ -46,12 +44,11 @@
 .news{
     display: flex;
     color: white;
-    /* padding: 30px; */
     justify-content: center;
     max-height: 100vh;
-    /* align-items: center; */
+    
     padding: 5% 5%; 
-    /* margin-bottom: 20px; */
+   
 }
 
 @media only screen and (max-width:360px){
@@ -66,11 +63,26 @@
        
     }
     .image{
-        height: 300px;
+        height: 100%;
+    }
+    .imagediv{
+        height: 200px;
+    }
+
+    .newswrapimgdiv{
+        height: 100px;
     }
 
 
 }
+
+.image{
+    height: 100%;
+}
+.imagediv{
+    height: 200px;
+}
+
 
 .newsmain{
     padding: 0 60px 0 60px;
@@ -98,7 +110,7 @@
     }
 
     .contenthtmldiv{
-        /* width: 200px; */
+      
         overflow-y: scroll;
     }
 }
