--- a/src/components/NewsWarp/newswrap.module.css
+++ b/src/components/NewsWarp/newswrap.module.css
@@ -6,13 +6,15 @@
 
     justify-content: center;
     height: full;
-    padding: 5% 5%; 
+    padding: 3% 3%; 
     margin-bottom: 30px;
 }
 .newsimagediv{
     height: 500px;
 }
-
+.newsimageright{
+    height: 220px;
+}
 @media screen  and (max-width:640px){
     .newswrapcontainer{
         display: flex;
