--- a/src/components/Wrap/wrap.module.css
+++ b/src/components/Wrap/wrap.module.css
@@ -1,6 +1,6 @@
 .wrap {
 
-    background-color: black;
+    background-color: #245557;
     display: flex;
     flex-direction: row;
     color: white;
