--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,11 +1,11 @@
-
-
 html,
 body {
   padding: 0;
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+  max-width: 1250px;
+  margin: 0 auto;
 }
 
 a {
@@ -18,4 +18,3 @@ a {
   margin: 0;
   padding: 0;
 }
-
