--- a/src/components/SecondNavbar/Navbar.module.css
+++ b/src/components/SecondNavbar/Navbar.module.css
@@ -66,7 +66,7 @@
     justify-content: space-between;
     align-items: center;
 
-  
+
 
 }
 
@@ -88,6 +88,9 @@
 
 
 @media only screen and (max-width:768px) {
+    .socialmedia{
+        display:none
+    }
     .barIcon {
         display: block;
         cursor: pointer;
@@ -138,7 +141,7 @@
     }
 
     .socialmedia {
-        display: flex;
+        display: none;
         flex-direction: row;
         justify-content: center;
         text-align: center;
@@ -200,6 +203,7 @@
     display: flex;
     flex-direction: row;
     justify-content: space-between;
+    align-items: center;
 
 }
 
