--- a/src/components/Wrap/wrap.module.css
+++ b/src/components/Wrap/wrap.module.css
@@ -1,10 +1,10 @@
 .wrap {
-
     background-color: #245557;
     display: flex;
     flex-direction: row;
     color: white;
-    padding: 4px;
+    /* padding: 4px; */
+    /* margin:4px; */
     align-items: center;
     text-align: center;
     justify-content: center;
@@ -64,7 +64,7 @@
     .wraprow {
         display: flex;
         flex-direction: row;
-        justify-content: center;
+        justify-content: space-around;
     }
 
     .barimg {
@@ -79,7 +79,7 @@
         align-items: center;
         overflow-x: scroll;
 
-    }     
+    }
 
 
 }
@@ -87,6 +87,9 @@
 .wraprow {
     flex-direction: row;
     display: flex;
+    justify-content: space-around;
+    margin-left: 8px;
+    padding: 4px;
 }
 
 .wrapimg {
@@ -104,11 +107,11 @@
 
 .percentage {
     color: #F14865;
-    margin-left: 4px;
+    /* margin-left: 4px; */
 }
 
 .perc {
     color: yellowgreen;
-    margin-left: 4px;
+    /* margin-left: 4px; */
 
 }
