--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,16 +1,18 @@
 html,
 body {
   padding: 0;
-  margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
   max-width: 1250px;
-  margin: 0 auto;
+  margin: auto;
 }
 
 a {
   color: inherit;
   text-decoration: none;
+}
+hr {
+  z-index: -1;
 }
 
 * {
@@ -27,7 +29,6 @@ a {
   margin-top: 8px;
   /* font-size: 40px;  */
 }
-
 
 .pagination a {
   color: black;
@@ -53,10 +54,64 @@ a {
   cursor: pointer;
 }
 
-
 .active {
   background-color: #245557;
   color: white;
   padding: 0px 12px;
   border-radius: 5px;
+}
+
+.news_newsmain__FWESc {
+  padding: 0 !important;
+}
+
+.articleInput {
+  width: 100%;
+  padding: 12px 20px;
+  margin: 8px 0;
+  display: inline-block;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  box-sizing: border-box;
+  /* position: absolute; */
+  z-index: 0;
+}
+.tox-tinymce {
+  z-index: 0;
+}
+.react-datepicker-popper {
+  inset: unset !important;
+  transform: none !important;
+}
+.liveMarketSection {
+  max-width: 99%;
+  overflow-y: scroll;
+}
+.searchForm {
+  margin: 10px;
+  position: absolute;
+  right: 340px;
+  z-index: 9999 !important;
+  top: 70px;
+  background-color: white;
+  border-radius: 10px;
+}
+.searchInput {
+  padding: 10px;
+  background-color: transparent;
+  outline: none;
+  border: none;
+  border-radius: 10px;
+  color: black;
+}
+
+@media (max-width: 768px) {
+  .searchForm {
+    right: 0;
+    top: 70px;
+  }
+  .liveMarket{
+    max-width: 500px;
+    overflow-x: scroll;
+  }
 }
